# deep-research-agent

./: .gitignore  README.md  input.txt  langgraph.json  pyproject.toml  research_index.json
.github/workflows/: integration-tests.yml  unit-tests.yml
chroma_db/: chroma.sqlite3
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ChatInterface.jsx  Login.jsx  Sidebar.jsx
frontend/src/hooks/: useTheme.js
frontend/src/utils/: langgraph.js
src/agent/: graph.py
src/agent/chains/: assistant_chain.py  evaluate_content_chain.py  generate_query_chain.py  memory_router.py  research_strategist.py  summarize_sources.py
src/agent/nodes/: assistant_node.py  evaluate_content.py  generate_query.py  retrieve_memory_node.py  review_research_node.py  router_node.py  save_context_node.py  summarize_sources.py  web_search.py
src/agent/prompts/: prompts.py
src/agent/states/: agent_state.py
src/agent/utils/: common.py  memory.py  search.py
tests/: test_memory_flow.py
wiki/: Advanced-Memory.md  Gap-Analysis-and-Self-Correction.md  Home.md  Human-in-the-loop.md  Persistence-and-Thread-Management.md  The-Research-Graph.md  _Sidebar.md
